.metadata/.plugins/org.eclipse.cdt.ui/(11-04) Dynamic Array of Names.build.log
09:42:47 **** Build of configuration Debug for project (11-04) Dynamic Array of Names ****
make all 
Building file: ../src/(11-04) Dynamic Array of Names.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/(11-04) Dynamic Array of Names.d" -MT"src/(11-04)\ Dynamic\ Array\ of\ Names.d" -o "src/(11-04) Dynamic Array of Names.o" "../src/(11-04) Dynamic Array of Names.cpp"
../src/(11-04) Dynamic Array of Names.cpp: In function ‘int main()’:
../src/(11-04) Dynamic Array of Names.cpp:25:11: warning: unused variable ‘Temp’ [-Wunused-variable]
  char  ** Temp;
           ^
../src/(11-04) Dynamic Array of Names.cpp: In function ‘void Func1(char**, int)’:
../src/(11-04) Dynamic Array of Names.cpp:54:10: error: ‘pNames’ was not declared in this scope
  strcmp (pNames [0], pNames [1]);
          ^
../src/(11-04) Dynamic Array of Names.cpp: In function ‘int Search(char**, char*, int)’:
../src/(11-04) Dynamic Array of Names.cpp:61:26: warning: statement has no effect [-Wunused-value]
  strcmp (pNames [0], Name);
                          ^
../src/(11-04) Dynamic Array of Names.cpp:62:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
make: *** [src/(11-04) Dynamic Array of Names.o] Error 1

09:42:47 Build Finished (took 542ms)

